2011-04-21  Hendrik Tews <prooftree@askra.de>

	* release version 0.3 on 2011-04-21 14:43:35 UTC

2011-04-21  Hendrik Tews <prooftree@askra.de>

	* make-bundle fix

2011-04-21  Hendrik Tews <prooftree@askra.de>

	* prepare changes.html for release

2011-04-21  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* new protocol command switch-to
	* Coq's Focus/Unfocus work

2011-04-20  Hendrik Tews <prooftree@askra.de>

	* release version 0.2 on 2011-04-20 20:36:37 UTC

2011-04-20  Hendrik Tews <prooftree@askra.de>

	* another make-bundle fix

2011-04-20  Hendrik Tews <prooftree@askra.de>

	* prepare changes.html for release

2011-04-20  Hendrik Tews <prooftree@askra.de>

	* make-bundle fix

2011-04-20  Hendrik Tews <prooftree@askra.de>

	* prepare changes.html for release

2011-04-20  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* existential variables are now updated (which required
	  only Emacs lisp changes)
	* fix a number of cases when the sequent window showed
	  invalid or non-existing sequent text

2011-04-18  Hendrik Tews <prooftree@askra.de>

	* release version 0.1

2011-04-18  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* undo release
	* makefile fix

2011-04-18  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* minor

2011-04-18  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* make-bundle changes

2011-04-18  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* small improvements

2011-04-18  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* various README's, make-bundle

2011-04-18  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* GPL 3

2011-04-18  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* configure

2011-04-15  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* fix bug with new subgoals and their order

2011-04-15  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* scroll sequent window to bottom

2011-04-15  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* redesign communication protocol (send complete states
	  now)
	* fix idle proof command problem
