@@ -1,3 +1,7 @@
+2011-05-12  Hendrik Tews  <tews@os.inf.tu-dresden.de>
+
+	* clear sequent window when undoing the selected proof command
+
 2011-04-21  Hendrik Tews <prooftree@askra.de>
 
 	* release version 0.3 on 2011-04-21 14:43:35 UTC
